--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
+  
 dependencies:
   flutter:
     sdk: flutter
@@ -34,18 +36,22 @@ dependencies:
   audioplayers: ^0.16.0
   android_intent: ^0.3.6+12
   auto_size_text: ^2.0.2
-  flutter_spinkit: ^3.1.0
+  #quick_actions: ^0.4.0+10
   flutter_auth_buttons: ^0.5.0
   geocoder:
   google_maps_flutter: ^0.5.30
   location: ^3.0.2
 
   flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_name: "^0.0.1"
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
+
+flutter_launcher_name:
+  name: "Women Diamond"
 
   
 
