--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  android_intent: ^0.3.6+12
+  android_intent: ^0.3.7+7
   audioplayers: ^0.16.0
   auto_size_text: ^2.0.2
-  cloud_firestore: ^0.14.0
+  cloud_firestore: ^0.14.4
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.2
-  firebase_core: ^0.5.1
+  firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
   flutter_auth_buttons: ^0.5.0
   flutter_launcher_icons: ^0.8.0
   flutter_launcher_name: ^0.0.1
   geocoder: null
   geolocator: ^6.1.8
-  google_maps_flutter: ^0.5.30
-  location: ^3.2.1
+  google_maps_flutter: ^0.5.30 
   permission_handler: ^4.4.0+hotfix.2
   sms: ^0.2.4
   url_launcher: ^5.7.2
